# rosbag-extract-audio-video

./: .gitignore  CMakeLists.txt  README.md  package.xml
python/jsk_rosbag_tools/: bag_to_audio.py  bag_to_video.py  extract.py
scripts/: bag_to_audio.py  bag_to_video.py
